cmake_minimum_required(VERSION 3.10)
project(Cinema)
set(CMAKE_CXX_STANDARD 17)
add_executable(Server Server.cpp)
if(WIN32)
    target_link_libraries(Server ws2_32)
endif()
add_executable(Client Client.cpp)
if(WIN32)
    target_link_libraries(Client ws2_32)
endif()
find_package(GTest REQUIRED)
add_executable(run_tests CinemaTests.cpp)
target_link_libraries(run_tests GTest::gtest_main ws2_32)