cmake_minimum_required(VERSION 3.10)
project(Cinema)
set(CMAKE_CXX_STANDARD 17)
add_executable(CinemaServer Server.cpp)
if(WIN32)
    target_link_libraries(CinemaServer ws2_32)
endif()
add_executable(CinemaClient Client.cpp)
if(WIN32)
    target_link_libraries(CinemaClient ws2_32)
endif()
find_package(GTest REQUIRED)
add_executable(run_tests CinemaTests.cpp)
target_link_libraries(run_tests GTest::gtest_main ws2_32)